presentation-themes/me.scss
/*-- scss:defaults --*/

// fonts

@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700');

$font-family-sans-serif: "Atkinson Hyperlegible", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
$font-family-monospace    : "Ubunto Mono", monospace !default;

$font-weight-bold: 800;
$font-weight-normal: 400;


$white: hsla(0, 0%, 100%, 1);
$gray-100: hsl(210, 17%, 98%) !default;
$gray-200: hsl(210, 16%, 93%) !default;
$gray-300: hsl(0, 0%, 87%) !default;
$gray-400: hsl(210, 14%, 83%) !default;
$gray-500: hsl(210, 11%, 71%) !default;
$gray-600: hsl(210, 7%, 56%) !default;
$gray-700: hsl(210, 9%, 31%) !default;
$gray-800: hsl(210, 10%, 23%) !default;
$gray-900: hsl(210, 11%, 15%) !default;
$black:    hsl(0, 0%, 0%) !default;

$theme-colors: (
    "white":      hsl(0, 0%, 100%),
    "light":      hsl(219, 49%, 91%),
    "default":    hsl(210, 11%, 71%),
    "dark":       hsl(227, 100%, 3%),
    "primary":    hsl(227, 71%, 55%),
    "secondary":  hsl(225, 95%, 63%),
    "info":       hsl(221, 96%, 70%),
    "accent1":    hsl(227, 89%, 22%),
    "accent2":    hsl(226, 61%, 48%),
    "accent3":    hsl(218, 78%, 77%),
    "success":    hsl(152, 37%, 46%),
    "warning":    hsl(36, 54%, 51%),
    "danger":     hsl(4, 90%, 58%),
    );
    
$color-names:  map-keys($theme-colors);
    
$light: map-get($theme-colors, "light");
$dark: map-get($theme-colors, "dark");
$primary: map-get($theme-colors, "primary");
$secondary: map-get($theme-colors, "secondary");
$info: map-get($theme-colors, "info");
$accent1: map-get($theme-colors, "accent1");
$accent2: map-get($theme-colors, "accent2");
$accent3: map-get($theme-colors, "accent3");
$success: map-get($theme-colors, "success");
$warning: map-get($theme-colors, "warning");
$danger: map-get($theme-colors, "danger");

$light-accent : $accent3;
$medium-accent: $accent2;
$dark-accent  : $accent1;
$default: $gray-500;

$dark-background: $dark-accent;
$light-background: $light;
$white-background: $white;

$link-color   : $primary !default;


// breakpoints

$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1400px
);


/*-- scss:rules --*/


// colors

@each $color-name in $color-names {
  .text-#{$color-name} {
    color: map-get($theme-colors, $color-name);
  }

  .bg-#{$color-name} {
    background-color: map-get($theme-colors, $color-name);
  }
}

// acceptable rem values with 1 rem = 16 px
// 0.25, 0.5, 0.75, 1, 1.5, 2, 4, 6, 8, 12, 16, 24, 32, 40, 48

body {
  font-family: $font-family-sans-serif;
  color: $dark;
}

p {
  font-family: inherit;
  line-height: calc(150% + (0.0025vw * (100 - 30))); /* calculate line height */
}

h1, h2, h3, h4, h5, h6 {
  font-family: $font-family-sans-serif;
  font-weight: 400;
  color: inherit, $dark;
  border-bottom: none;
}

a {
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

.date {
  color: $default;
}

.font-normal {
  font-weight: $font-weight-normal;
}

.text-uppercase {
  text-transform: uppercase;
}

.text-lowercase {
  text-transform: lowercase;
}

// callouts

.callout-info {
  border-left-color: $info;
}

.callout-warning {
  border-left-color: $warning;

}
.callout-danger {
  border-left-color: $danger;
}

.callout-tip{
  border-left-color: $success;
}

// sidebars


  .margin-sidebar,
  .toc-active .header-section-number {
  color: $gray-400;
}


@media (min-width: 992px) {
  .sidebar-menu-container a, .sidebar-item-container .chapter-number {
    color: $gray-400;
  }
}

// buttons

.btn {
  border-radius: 5px;
}

// responsive iframe
.container {
  position: relative;
  width: 100%;
  padding-bottom: 5%;
}

.responsive-iframe {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 500px;
}

.quarto-title-meta-heading {
  color: $default;
}

// revealjs
.reveal {
  & .title-box {
    position: absolute;
    right: 480px;
    top: 200px;
    height: 550px;
    width: 1500px;
    background-color: $light-accent;
    padding: 20px;
    padding-left: 50px;
    box-shadow: -15px 15px 0px 0px $dark-accent;
    border-radius: 5px;
  } // boxes of Tom Mock Quarto presenation

  & .title-subtitle{
    font-size: 1.5rem;
    font-weight: 400;
    color: $medium-accent;
  }
  
  & .quarto-title-authors{
    display: flex;
    justify-content: flex-start;
    color: $dark-accent;
  }

  & .quarto-title-block .date{
    font-size: 1.5rem;
    font-weight: 400;
    text-align: right;
  }

  // & .title-institution{
  //   font-size: 1.5rem;
  //   font-weight: 400;
  //   color: $dark;
  // }

  // & .title-place{
  //   font-size: 1.5rem;
  //   font-weight: 400;
  //   color: $dark;
  // }

  & .title-social{
    font-family: $font-family-monospace;
    color: $light-accent;
  }

  & .inverted, & .level1 {
    color: $light;
    background-color: $dark;

    & h1{
      text-transform: lowercase;
    }
  }

  & .has-dark-background {
    color: $white;
    background-color: $dark-background;

    & h1, & h2, & h3, & h4 {
      color: $light;
    }
  }

  & h1, & h2, & h3, & h4, & h5, & h6 {
    font-family: $font-family-sans-serif;
    font-weight: $font-weight-bold;
    text-transform: lowercase;
    color: $dark-accent;
    
    &.title {
        text-transform: uppercase;
        font-size: 8rem;
        font-weight: $font-weight-bold;
        color: $primary;
    }
  }
  
  & .right {
    text-align: right;
  }

  & .text-emphasis {
    font-weight: $font-weight-bold;
    color: $primary;
  }

  & .slide-menu-button a{
   color: $light;
  }

  & .progress span {
    background-color: $accent3;
  }

  & .slide-cite {
    color: $default;
    font-size: 1rem;
    position: absolute;
    display: block;
    margin-top: 5px;
    text-align: right;
    bottom: 0;
    right: 0;
  }

  & img {
    border-radius: 10px;
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
  }

  & table th,
  & table td {
 text-align:left;
 padding:.2em .5em .2em .5em;
 border-bottom:1px solid;
 border-color: $light;
  }
}


// extras

.empty {
  color: inherit;
  -webkit-text-stroke: 2px;
  text-stroke: 2px;
  -webkit-text-fill-color: transparent;
  text-fill-color: transparent;
}

